[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprites/player/gun.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/shotComp.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/bulletout.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/spin.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sprites/player/godgun.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/godunshot2.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/godgunshot.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/godgunreverse.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 36.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.0
height = 28.0

[sub_resource type="Curve" id=4]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 360 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.421788, 0.815642 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 1, 1, 0.972656, 0, 1 )

[node name="Player" type="RigidBody2D"]
position = Vector2( 256, 502 )
collision_layer = 524289
collision_mask = 524289
gravity_scale = 2.0
script = ExtResource( 2 )
gravityScale = 4

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 4 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="BulletPoint" type="Position2D" parent="."]
position = Vector2( 12, 0 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AimCast" type="RayCast2D" parent="."]
position = Vector2( 12, 0 )
enabled = true
cast_to = Vector2( 1000, 0 )
collision_mask = 256

[node name="SandCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -9, -4, -9, 0, -13, 0, -13, 20, -5, 20, -5, 12, -1, 12, 7, 12, 7, 8, 11, 8, 11, 4, 19, 4, 19, -4, 15, -4, 15, -8, 11, -8, 11, -4, -5, -4, -5, -8, -9, -8 )

[node name="OilCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="OilDetect" type="Area2D" parent="."]
collision_layer = 524289
collision_mask = 524289

[node name="CollisionShape2D" type="CollisionShape2D" parent="OilDetect"]
position = Vector2( 3, 6 )
shape = SubResource( 2 )

[node name="shot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.266

[node name="godGunShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 12.885

[node name="bulletout" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.924

[node name="spin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 4.608

[node name="reload" type="Timer" parent="."]
one_shot = true

[node name="resetdamp" type="Timer" parent="."]
one_shot = true

[node name="godGunSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 2 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="godGunCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
rotation = 1.5708
shape = SubResource( 3 )
disabled = true

[node name="godGunFireRate" type="Timer" parent="."]

[node name="godGun" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 2, 3 )
stream = ExtResource( 7 )
volume_db = 5.062

[node name="godGunReverse" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 2, 3 )
stream = ExtResource( 9 )
volume_db = 5.062

[node name="godGunParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 273.4
initial_velocity_random = 0.25
angle_curve = SubResource( 4 )
scale_amount = 16.0
scale_amount_random = 0.5
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )

[connection signal="body_entered" from="OilDetect" to="." method="_on_OilDetect_body_entered"]
[connection signal="body_exited" from="OilDetect" to="." method="_on_OilDetect_body_exited"]
[connection signal="timeout" from="godGunFireRate" to="." method="_on_godGunFireRate_timeout"]
